Changes in Projects

--- a/files/resume.html
+++ b/files/resume.html
@@ -45,14 +45,14 @@
           Reach out to me via my
           <a class="content-link" href="./contact.html">contact page</a>.
           <a class="content-link" href="#">view</a> or
-          <a class="content-link" href="./assets/Resume - Sujal Samai.pdf"
+          <a class="content-link" href="./assets/resume - sujal samai.pdf"
             >download</a
           >
           the resume
         </p>
       </div>
       <a href="./assets/Resume - Sujal Samai.pdf">
-        <img class="resume-png" src="./assets/Resume.png" alt="Resume" />
+        <img class="resume-png" src="./assets/resume.jpg" alt="Resume" />
       </a>
       <a href="./contact.html">
         <div class="more">
