--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         ></a>
       </div>
     </footer>
-    <div class="watermark">
+    <!-- <div class="watermark">
       <img class="watermark-img" src="./files/assets/sujal.jpg" alt="" />
-    </div>
+    </div> -->
     <div class="watermark">Hello, There.</div>
     <script src="./files/indexScript.js"></script>
   </body>
