Made Projects section responsive

--- a/files/resume.html
+++ b/files/resume.html
@@ -51,7 +51,7 @@
           the resume
         </p>
       </div>
-      <a href="./assets/Resume - Sujal Samai.pdf">
+      <a href="./assets/resume - sujal samai.pdf">
         <img class="resume-png" src="./assets/resume.jpg" alt="Resume" />
       </a>
       <a href="./contact.html">
