--- a/files/projects.html
+++ b/files/projects.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,700&family=Gantari:ital,wght@0,300;0,400;0,700;0,900;1,300&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Stardos+Stencil:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" href="./assets/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/main.css" />
     <script
@@ -41,6 +45,29 @@
         <h1>Projects.</h1>
       </div>
       <div class="container">
+        <div class="card">
+          <a href="https://travel-blog-sujalsamai.netlify.app">
+            <img class="card-img" src="./assets/Travel.jpg" alt="" />
+            <div class="card-desc">
+              <h2>Travel-Journal</h2>
+              <p>Sneak Peak into the places, I have visited.</p>
+              <div class="tech">ReactJS</div>
+              <div class="tech">CSS3</div>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="https://sujalsamai.github.io/Sorting-Visualizer/">
+            <img class="card-img" src="./assets/Sorting.jpg" alt="" />
+            <div class="card-desc">
+              <h2>Sorting Visualizer</h2>
+              <p>Various Sorting Algorithms Visualizer.</p>
+              <div class="tech">HTML5</div>
+              <div class="tech">CSS3</div>
+              <div class="tech">JavaScript</div>
+            </div>
+          </a>
+        </div>
         <div class="card">
           <a href="https://github.com/SujalSamai/Super-Mario-Game">
             <img class="card-img" src="./assets/super-mario.jpg" alt="" />
@@ -103,7 +130,7 @@
               alt=""
             />
             <div class="card-desc">
-              <h2>Smart Home Automation</h2>
+              <h2>Home Automation</h2>
               <p>Automating various home appliances using IOT.</p>
               <div class="tech">Cisco Packet Tracer</div>
             </div>
