--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,700&family=Gantari:ital,wght@0,300;0,400;0,700;0,900;1,300&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Stardos+Stencil:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" href="./files/assets/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./files/css/main.css" />
     <script
@@ -39,7 +43,7 @@
 
     <section class="main">
       <div class="header">
-        <h1>I'm Sujal Samai</h1>
+        <h1>I'm Sujal Samai.</h1>
       </div>
       <div class="description">
         <p>
