--- a/files/contact.html
+++ b/files/contact.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,700&family=Gantari:ital,wght@0,300;0,400;0,700;0,900;1,300&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Stardos+Stencil:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" href="./assets/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/main.css" />
     <script
