Improved Project Section

--- a/files/projects.html
+++ b/files/projects.html
@@ -47,35 +47,41 @@
       <div class="container">
         <div class="card">
           <a href="https://travel-blog-sujalsamai.netlify.app">
-            <img class="card-img" src="./assets/Travel.jpg" alt="" />
+            <img class="card-img" src="./assets/journal.jpg" alt="" />
             <div class="card-desc">
               <h2>Travel-Journal</h2>
               <p>Sneak Peak into the places, I have visited.</p>
-              <div class="tech">ReactJS</div>
-              <div class="tech">CSS3</div>
+              <div class="tech-container">
+                <div class="tech">ReactJS</div>
+                <div class="tech">CSS3</div>
+              </div>
             </div>
           </a>
         </div>
         <div class="card">
           <a href="https://sujalsamai.github.io/Sorting-Visualizer/">
-            <img class="card-img" src="./assets/Sorting.jpg" alt="" />
+            <img class="card-img" src="./assets/Sorting.jpeg" alt="" />
             <div class="card-desc">
               <h2>Sorting Visualizer</h2>
               <p>Various Sorting Algorithms Visualizer.</p>
-              <div class="tech">HTML5</div>
-              <div class="tech">CSS3</div>
-              <div class="tech">JavaScript</div>
+              <div class="tech-container">
+                <div class="tech">HTML5</div>
+                <div class="tech">CSS3</div>
+                <div class="tech">JavaScript</div>
+              </div>
             </div>
           </a>
         </div>
         <div class="card">
           <a href="https://github.com/SujalSamai/Super-Mario-Game">
-            <img class="card-img" src="./assets/super-mario.jpg" alt="" />
+            <img class="card-img" src="./assets/Super-Mario (2).jpg" alt="" />
             <div class="card-desc">
               <h2>Super Mario Bros.</h2>
               <p>Super Mario Bros. Game Running in Browser.</p>
-              <div class="tech">HTML Canvas</div>
-              <div class="tech">JavaScript</div>
+              <div class="tech-container">
+                <div class="tech">HTML Canvas</div>
+                <div class="tech">JavaScript</div>
+              </div>
             </div>
           </a>
         </div>
@@ -85,7 +91,9 @@
             <div class="card-desc">
               <h2>Uno Card Game</h2>
               <p>Uno Card Game running in the command line.</p>
-              <div class="tech">Python</div>
+              <div class="tech-container">
+                <div class="tech">Python</div>
+              </div>
             </div>
           </a>
         </div>
@@ -95,10 +103,12 @@
             <div class="card-desc">
               <h2>Ethereum Data</h2>
               <p>Fetching information of an Ethereum Blockchain.</p>
-              <div class="tech">Web3.js</div>
-              <div class="tech">Node.js</div>
-              <div class="tech">Html5</div>
-              <div class="tech">CSS3</div>
+              <div class="tech-container">
+                <div class="tech">Web3.js</div>
+                <div class="tech">Node.js</div>
+                <div class="tech">Html5</div>
+                <div class="tech">CSS3</div>
+              </div>
             </div>
           </a>
         </div>
@@ -108,7 +118,9 @@
             <div class="card-desc">
               <h2>Rock Paper Scissor</h2>
               <p>Rock Paper Scissor running in the command line.</p>
-              <div class="tech">Python</div>
+              <div class="tech-container">
+                <div class="tech">Python</div>
+              </div>
             </div>
           </a>
         </div>
@@ -118,7 +130,9 @@
             <div class="card-desc">
               <h2>Tic Tac Toe</h2>
               <p>Tic Tac Toe Game running in the command line.</p>
-              <div class="tech">Java</div>
+              <div class="tech-container">
+                <div class="tech">Java</div>
+              </div>
             </div>
           </a>
         </div>
@@ -132,7 +146,9 @@
             <div class="card-desc">
               <h2>Home Automation</h2>
               <p>Automating various home appliances using IOT.</p>
-              <div class="tech">Cisco Packet Tracer</div>
+              <div class="tech-container">
+                <div class="tech">Cisco Packet Tracer</div>
+              </div>
             </div>
           </a>
         </div>
