--- a/files/about.html
+++ b/files/about.html
@@ -40,7 +40,7 @@
         </div>
       </div>
     </nav>
-    <section class="main">
+    <section class="main main-end">
       <div class="header">
         <h1>About Me.</h1>
       </div>
@@ -71,11 +71,11 @@
                 Frontend Web Development is my thing. Although, I am not a very
                 good designer,I do possess good creative thinking ability, and
                 this makes me an excellent visualizer. I know various
-                technologies like HTML5, CSS3, SAAS, Bootstrap, JavaScript,
-                React JS. And I believe with my knowledge I'm excellent in
-                presenting my visualization. Apart from having extensive
-                knowledgeof recognized technical standards, I am conversant with
-                modern building practices.
+                technologies like React JS, Tailwind CSS and other various
+                libraries in Frontend Development. And I believe with my
+                knowledge I'm excellent in presenting my visualization. Apart
+                from having extensive knowledgeof recognized technical
+                standards, I am conversant with modern building practices.
               </p>
             </div>
           </div>
@@ -147,6 +147,12 @@
         <a href=""><i class="fa-brands fa-instagram"></i></a>
         <a href="https://github.com/SujalSamai"
           ><i class="fa-brands fa-github"></i
+        ></a>
+        <a href="https://sujalsamai.hashnode.dev/"
+          ><i class="fa-brands fa-hashnode"></i
+        ></a>
+        <a href="https://discordapp.com/users/sujal#6596"
+          ><i class="fa-brands fa-discord"></i
         ></a>
       </div>
     </footer>
