--- a/files/contact.html
+++ b/files/contact.html
@@ -40,7 +40,7 @@
         </div>
       </div>
     </nav>
-    <section class="main">
+    <section class="main main-end">
       <div class="header">
         <h1>Contact.</h1>
       </div>
@@ -107,6 +107,12 @@
         <a href=""><i class="fa-brands fa-instagram"></i></a>
         <a href="https://github.com/SujalSamai"
           ><i class="fa-brands fa-github"></i
+        ></a>
+        <a href="https://sujalsamai.hashnode.dev/"
+          ><i class="fa-brands fa-hashnode"></i
+        ></a>
+        <a href="https://discordapp.com/users/sujal#6596"
+          ><i class="fa-brands fa-discord"></i
         ></a>
       </div>
       <div class="watermark">Contact.</div>
