--- a/files/projects.html
+++ b/files/projects.html
@@ -40,20 +40,22 @@
         </div>
       </div>
     </nav>
-    <section class="main">
+    <section class="main main-end">
       <div class="header">
         <h1>Projects.</h1>
       </div>
       <div class="container">
         <div class="card">
-          <a href="https://travel-blog-sujalsamai.netlify.app">
-            <img class="card-img" src="./assets/journal.jpg" alt="" />
+          <a href="https://vogueeco.us">
+            <img class="card-img" src="./assets/vogueeco.jpg" alt="" />
             <div class="card-desc">
-              <h2>Travel-Journal</h2>
-              <p>Sneak Peak into the places, I have visited.</p>
+              <h2>VogueEco</h2>
+              <p>Save your environment with you Fashion Sense.</p>
               <div class="tech-container">
                 <div class="tech">ReactJS</div>
-                <div class="tech">CSS3</div>
+                <div class="tech">Tailwind CSS</div>
+                <div class="tech">Appwrite</div>
+                <div class="tech">Docker</div>
               </div>
             </div>
           </a>
@@ -171,6 +173,12 @@
         <a href=""><i class="fa-brands fa-instagram"></i></a>
         <a href="https://github.com/SujalSamai"
           ><i class="fa-brands fa-github"></i
+        ></a>
+        <a href="https://sujalsamai.hashnode.dev/"
+          ><i class="fa-brands fa-hashnode"></i
+        ></a>
+        <a href="https://discordapp.com/users/sujal#6596"
+          ><i class="fa-brands fa-discord"></i
         ></a>
       </div>
       <div class="watermark-rotate">Projects.</div>
