--- a/files/resume.html
+++ b/files/resume.html
@@ -40,7 +40,7 @@
         </div>
       </div>
     </nav>
-    <section class="main">
+    <section class="main main-end">
       <div class="header">
         <h1>Resume.</h1>
       </div>
@@ -49,14 +49,14 @@
           Reach out to me via my
           <a class="content-link" href="./contact.html">contact page</a>.
           <a class="content-link" href="#">view</a> or
-          <a class="content-link" href="./assets/resume - sujal samai.pdf"
+          <a class="content-link" href="./assets/Sujal Samai - Resume.pdf"
             >download</a
           >
           the resume
         </p>
       </div>
-      <a href="./assets/resume - sujal samai.pdf">
-        <img class="resume-png" src="./assets/resume.jpg" alt="Resume" />
+      <a href="./assets/Resume - Sujal Samai.pdf">
+        <img class="resume-png" src="./assets/Resume.jpg" alt="Resume" />
       </a>
       <a href="./contact.html">
         <div class="more">
@@ -76,6 +76,12 @@
         <a href=""><i class="fa-brands fa-instagram"></i></a>
         <a href="https://github.com/SujalSamai"
           ><i class="fa-brands fa-github"></i
+        ></a>
+        <a href="https://sujalsamai.hashnode.dev/"
+          ><i class="fa-brands fa-hashnode"></i
+        ></a>
+        <a href="https://discordapp.com/users/sujal#6596"
+          ><i class="fa-brands fa-discord"></i
         ></a>
       </div>
       <div class="watermark-rotate">Resume.</div>
