--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     ></script>
   </head>
   <body>
-    <nav class="nav">
+    <nav id="home" class="nav">
       <div class="logo">
         <h1>SS.</h1>
       </div>
@@ -36,7 +36,7 @@
         <a class="nav-items" href="./files/resume.html">Resume</a>
         <a class="nav-items" href="./files/contact.html">Contact</a>
         <div class="mode">
-          <img id="icon" src="./files/assets/sun.png" />
+          <img id="icon" src="./files/assets/moon.png" />
         </div>
       </div>
     </nav>
@@ -45,7 +45,7 @@
       <div class="header">
         <h1>I'm Sujal Samai.</h1>
       </div>
-      <div class="description">
+      <div class="description main-desc">
         <p>
           CSE Undergrad Student, Frontend Developer, Open Source Enthusiast,
           Always with a book, Sad & Indie Music Lover, Photogenic sometimes on
@@ -53,38 +53,323 @@
         </p>
         <br />
         <p>
-          Working on DSA Skills, and learning Backend Development. Trying to
-          meet amazing people in the internet, network and learn with them. View
-          my <a href="./files/projects.html">Projects</a>,
-          <a href="#">Articles</a>, <a href="./files/resume.html">Resume</a> .
-          Contact Me, or send me an email at sujalsamai123@gmail.com .
+          Working on DSA Skills, and learning Full Stack Frontend Development.
+          Trying to meet amazing people in the internet, network and learn with
+          them. View my
+          <span class="para-links"
+            ><a href="./files/projects.html">Projects</a></span
+          >,
+          <span class="para-links"
+            ><a href="https://sujalsamai.hashnode.dev/">Articles</a></span
+          >,
+          <span class="para-links"
+            ><a href="./files/resume.html">Resume</a></span
+          >
+          .
+        </p>
+        <br />
+        <p>
+          <span class="para-links"
+            ><a href="./files/contact.html"></a>Contact Me</span
+          >, or send me an email at sujalsamai123@gmail.com .
         </p>
       </div>
-      <a href="./files/about.html">
+      <div class="sm-container">
+        <div class="social">
+          <a href="https://twitter.com/SujalSamai"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/sujal-samai/"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://github.com/SujalSamai"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://sujalsamai.hashnode.dev/"
+            ><i class="fa-brands fa-hashnode"></i
+          ></a>
+          <a href="https://discordapp.com/users/sujal#6596"
+            ><i class="fa-brands fa-discord"></i
+          ></a>
+        </div>
+      </div>
+    </section>
+    <section class="main">
+      <div class="header">
+        <h1>About Me.</h1>
+      </div>
+
+      <div class="abt-container">
+        <div class="inner-container">
+          <div class="inner-container-desc">
+            <i class="fa-regular fa-circle"></i>
+            <div class="desc">
+              <h3>
+                Engineering Student <i class="fa-solid fa-graduation-cap"></i>
+              </h3>
+              <p>
+                I am a Pre-Final Year Student at MediCaps University, Indore,
+                India. Currently pursuing B.Tech CSE. Always been someone who
+                likes to learn new things especially about History and
+                Technology. Took part in various clubs of the University and is
+                enjoying my journey here.
+              </p>
+            </div>
+          </div>
+          <div class="inner-container-desc">
+            <i class="fa-regular fa-circle"></i>
+            <div class="desc">
+              <h3>Frontend Web Developer <i class="fa-solid fa-code"></i></h3>
+              <p>
+                After trying various things in my Freshman year, realized
+                Frontend Web Development is my thing. Although, I am not a very
+                good designer,I do possess good creative thinking ability, and
+                this makes me an excellent visualizer. I know various
+                technologies like HTML5, CSS3, SAAS, Bootstrap, JavaScript,
+                React JS. And I believe with my knowledge I'm excellent in
+                presenting my visualization. Apart from having extensive
+                knowledgeof recognized technical standards, I am conversant with
+                modern building practices.
+              </p>
+            </div>
+          </div>
+          <div class="inner-container-desc">
+            <i class="fa-regular fa-circle"></i>
+            <div class="desc">
+              <h3>
+                Open Source Contributor
+                <i class="fa-solid fa-code-fork"></i>
+              </h3>
+              <p>
+                Always wanted to get hands-on experience on how software
+                development really works in the industry. And for a student,
+                what's better place to start than Open Source? Have been part of
+                multiple Open Source communities, and has contributed to them
+                with my skills. My goal is to learn more technologies and
+                contribute more regularly.
+              </p>
+            </div>
+          </div>
+          <div class="inner-container">
+            <h2>Volunteering Experience.</h2>
+            <div class="inner-container-desc">
+              <i class="fa-regular fa-circle"></i>
+              <div class="desc">
+                <h3>CSCult</h3>
+                <p>
+                  Head of Operations of this wonderful community of over 600
+                  members. We conduct events on various new technologies, we
+                  even arrange programs to help newbie coders to create their
+                  first projects in more than 8 different fields. We have
+                  dedicated Book and Space club too where we regularly arrange
+                  meetings to learn about the respective field in Group
+                  Discussion.
+                </p>
+              </div>
+            </div>
+            <div class="inner-container-desc">
+              <i class="fa-regular fa-circle"></i>
+              <div class="desc">
+                <h3>Codechef MediCaps Chapter</h3>
+                <p>
+                  Executive Member of Competitive Programming Domain of the
+                  Codechef Medicaps Chapter which is College Club backed by
+                  Codechef. In this club, we arrange regular events, spreading
+                  awareness about Competitive Programming and conduct regular
+                  Competitive Coding Competitions in the Codechef Platform.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="main">
+      <div class="header">
+        <h1>Projects.</h1>
+      </div>
+      <div class="container">
+        <div class="card">
+          <a href="https://vogueeco.us">
+            <img class="card-img" src="./files/assets/vogueeco.jpg" alt="" />
+            <div class="card-desc">
+              <h2>VogueEco</h2>
+              <p>Save your environment with you Fashion Sense.</p>
+              <div class="tech-container">
+                <div class="tech">ReactJS</div>
+                <div class="tech">Tailwind CSS</div>
+                <div class="tech">Appwrite</div>
+                <div class="tech">Docker</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="https://sujalsamai.github.io/Sorting-Visualizer/">
+            <img class="card-img" src="./files/assets/Sorting.jpeg" alt="" />
+            <div class="card-desc">
+              <h2>Sorting Visualizer</h2>
+              <p>Various Sorting Algorithms Visualizer.</p>
+              <div class="tech-container">
+                <div class="tech">HTML5</div>
+                <div class="tech">CSS3</div>
+                <div class="tech">JavaScript</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="https://github.com/SujalSamai/Super-Mario-Game">
+            <img
+              class="card-img"
+              src="./files/assets/Super-Mario (2).jpg"
+              alt=""
+            />
+            <div class="card-desc">
+              <h2>Super Mario Bros.</h2>
+              <p>Super Mario Bros. Game Running in Browser.</p>
+              <div class="tech-container">
+                <div class="tech">HTML Canvas</div>
+                <div class="tech">JavaScript</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="https://github.com/SujalSamai/uno-card-game">
+            <img class="card-img" src="./files/assets/uno-card.jpg" alt="" />
+            <div class="card-desc">
+              <h2>Uno Card Game</h2>
+              <p>Uno Card Game running in the command line.</p>
+              <div class="tech-container">
+                <div class="tech">Python</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="https://github.com/SujalSamai/access-eth-web3">
+            <img class="card-img" src="./files/assets/ethereum.jpg" alt="" />
+            <div class="card-desc">
+              <h2>Ethereum Data</h2>
+              <p>Fetching information of an Ethereum Blockchain.</p>
+              <div class="tech-container">
+                <div class="tech">Web3.js</div>
+                <div class="tech">Node.js</div>
+                <div class="tech">Html5</div>
+                <div class="tech">CSS3</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="https://github.com/SujalSamai/Rock-paper-scissor">
+            <img class="card-img" src="./files/assets/rps.jpg" alt="" />
+            <div class="card-desc">
+              <h2>Rock Paper Scissor</h2>
+              <p>Rock Paper Scissor running in the command line.</p>
+              <div class="tech-container">
+                <div class="tech">Python</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="https://github.com/SujalSamai/Tic-Tac-Toe">
+            <img class="card-img" src="./files/assets/tic-tac-toe.jpg" alt="" />
+            <div class="card-desc">
+              <h2>Tic Tac Toe</h2>
+              <p>Tic Tac Toe Game running in the command line.</p>
+              <div class="tech-container">
+                <div class="tech">Java</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="https://github.com/SujalSamai/Home-Automation">
+            <img
+              class="card-img"
+              src="./files/assets/smart-home-automation.jpg"
+              alt=""
+            />
+            <div class="card-desc">
+              <h2>Home Automation</h2>
+              <p>Automating various home appliances using IOT.</p>
+              <div class="tech-container">
+                <div class="tech">Cisco Packet Tracer</div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="main main-end">
+      <div class="header">
+        <h1>Contact.</h1>
+      </div>
+      <div class="description">
+        <p>
+          Get in touch or shoot me an email directly on
+          <b>sujalsamai123@gmail.com</b>
+        </p>
+      </div>
+      <form method="post" action="https://formspree.io/f/mdobvqal">
+        <div class="fields">
+          <div class="field half">
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Name"
+              class="form-control"
+              aria-required="true"
+              required
+            />
+          </div>
+          <div class="field half">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Email"
+              class="form-control"
+              aria-required="true"
+              required
+            />
+          </div>
+          <div class="field">
+            <textarea
+              name="message"
+              id="message"
+              rows="5"
+              class="form-control"
+              placeholder="Message"
+              aria-required="true"
+              required
+            ></textarea>
+          </div>
+        </div>
+        <button class="btn btn-default" type="submit" aria-label="Send Message">
+          <b>Send Message</b>
+        </button>
+      </form>
+      <a href="#home">
         <div class="more">
-          See more about me
-          <span><i class="fa-solid fa-arrow-right-long"></i></span>
+          Go back to the top<span
+            ><i class="fa-solid fa-arrow-right-long"></i
+          ></span>
         </div>
       </a>
     </section>
-    <footer>
-      <div class="social">
-        <a href="https://twitter.com/SujalSamai"
-          ><i class="fa-brands fa-twitter"></i
-        ></a>
-        <a href="https://www.linkedin.com/in/sujal-samai/"
-          ><i class="fa-brands fa-linkedin"></i
-        ></a>
-        <a href=""><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://github.com/SujalSamai"
-          ><i class="fa-brands fa-github"></i
-        ></a>
-      </div>
-    </footer>
+
     <!-- <div class="watermark">
       <img class="watermark-img" src="./files/assets/sujal.jpg" alt="" />
     </div> -->
     <div class="watermark">Hello, There.</div>
-    <script src="./files/indexScript.js"></script>
+    <div id="circle" class="circle"></div>
+
+    <script src="./files/indexscript.js"></script>
   </body>
 </html>
